[tool.poetry]
name = "pyuniverse"
version = "0.1.0"
description = ""
authors = ["kayson <kaysonf.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = "^0.27.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pylint = "^3.0.3"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
